<resources>
    <string name="app_name">BillScanner</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="app_key">kid_S1hTI48Wb</string>
    <string name="app_secret">0ac0cff45fc14f7281c6bfd2276a36d6</string>
    <string name="picture"/>
    <string name="username">bill-scanner</string>
    <string name="password">bill-scanner</string>
    <string name="eng_lang">English</string>
    <string name="bul_lang">Bulgarian</string>
    <string name="ok">OK</string>
    <string name="take_a_picture_text">Take a picture</string>
    <string name="hello">Hello</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="new_picture">New picture</string>
    <string name="bills_preview">Bills preview</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="user_password">Password</string>
    <string name="account">Account</string>
    <string name="new_bill">New Bill</string>
    <string name="upload">Upload</string>
    <string name="upload_custom_bill">Upload custom bill</string>
    <string name="bill_name">Bill name</string>
    <string name="product_name">Product name</string>
    <string name="product_amount">Product amount</string>
    <string name="product_price">Product price</string>
    <string name="spend_money_for_this_month">Spend money for this month</string>
</resources>
