<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/upload"
        android:backgroundTint="@color/customGreen"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/bill_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/bill_name"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:paddingLeft="10dp"
        android:textColorHint="@color/customGreen"
        android:paddingRight="10dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/customGreen"
        android:backgroundTint="@color/customGreen"
        app:layout_constraintTop_toBottomOf="@+id/custom_bill"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:backgroundTint="@color/customGreen"
        android:paddingLeft="10dp"
        android:textColor="@color/customGreen"
        android:textColorHint="@color/customGreen"
        android:paddingRight="10dp"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/product_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/product_amount"
        android:backgroundTint="@color/customGreen"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/customGreen"
        android:inputType="phone"
        android:textColor="@color/customGreen"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:textColor="@color/customGreen"
        android:textColorHint="@color/customGreen"
        android:hint="@string/product_price"
        android:backgroundTint="@color/customGreen"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_amount"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/custom_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_custom_bill"
        android:textColor="@color/customGreen"
        android:textSize="36sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>